editors/zed/grammars/kukicha/grammar.js
    source_file: $ => seq(
      optional($.petiole_declaration),
      repeat($.import_declaration),
      repeat($._declaration),
    ),

    // Package declaration
    petiole_declaration: $ => seq(
      'petiole',
      field('name', $.identifier),
      $._newline,
    ),

    // Import declarations
    import_declaration: $ => seq(
      'import',
      field('path', $.interpreted_string_literal),
      optional(seq('as', field('alias', $.identifier))),
      $._newline,
    ),

    // Top-level declarations
    _declaration: $ => choice(
      $.function_declaration,
      $.method_declaration,
      $.type_declaration,
      $.interface_declaration,
      $.var_declaration,
    ),

    // Function declaration
    function_declaration: $ => seq(
      choice('func', 'function'),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(field('return_type', $.return_type)),
      $._newline,
      field('body', $.block),
    ),

    // Method declaration: func Name on receiver Type ReturnType
    parameter_list: $ => seq(
      '(',
      optional(commaSep1($.parameter)),
      ')',
    ),

    parameter: $ => seq(
      optional('many'),
      field('name', $.identifier),
      field('type', $.type),
    ),

    primitive_type: $ => choice(
      'int', 'int8', 'int16', 'int32', 'int64',
      'uint', 'uint8', 'uint16', 'uint32', 'uint64',
      'float32', 'float64',
      'string', 'bool', 'byte', 'rune', 'any', 'error',
    ),

    block: $ => seq(
      $._indent,
      repeat1($._statement),
      $._dedent,
    ),

    // Statements
    _statement: $ => choice(
      $.var_declaration,
      $.short_var_declaration,
      $.assignment_statement,
      $.expression_statement,
      $.return_statement,
      $.if_statement,
      $.for_range_statement,
      $.for_numeric_statement,
      $.for_condition_statement,
      $.for_infinite_statement,
      $.switch_statement,
      $.defer_statement,
      $.go_statement,
      $.send_statement,
      $.break_statement,
      $.continue_statement,
      $.inc_dec_statement,
    ),

    // Explicit variable declaration: var x int = 1
    return_statement: $ => seq(
      'return',
      optional(field('value', $._expression)),
      $._newline,
    ),

    // If statement
    _expression: $ => choice(
      $.primary_expression,
      $.binary_expression,
      $.unary_expression,
      $.pipe_expression,
    ),

    binary_expression: $ => choice(
      prec.left(1, seq($._expression, 'or', $._expression)),
      prec.left(1, seq($._expression, '||', $._expression)),
      prec.left(2, seq($._expression, 'and', $._expression)),
      prec.left(2, seq($._expression, '&&', $._expression)),
      prec.left(3, seq($._expression, '|', $._expression)),
      prec.left(4, seq($._expression, choice('==', '!=', 'equals'), $._expression)),
      prec.left(5, seq($._expression, choice('<', '>', '<=', '>='), $._expression)),
      prec.left(5, seq($._expression, 'in', $._expression)),
      prec.left(6, seq($._expression, choice('+', '-'), $._expression)),
      prec.left(7, seq($._expression, choice('*', '/', '%'), $._expression)),
    ),

    // Unary expressions
    interpreted_string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.string_interpolation,
        $.escape_sequence,
      )),
      '"',
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Comment
